manifests/dev/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: myapp-ingress
#   namespace: myapp-imagethree
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   # tls:
#   # - hosts:
#   #     - image-three.local
#   #   secretName: myapp-tls
#   rules:
#   - host: image-three.local
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: dev-myapp-imagethree-service
#             port:
#               number: 5004

# ---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp-imagetwo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: image-two.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-myapp-imagetwo-service
            port:
              number: 5005

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp-imageone
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: image-one.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-myapp-imageone-service
            port:
              number: 5006
